# FastAPI

./: .gitignore  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/api/v1/: board_router.py  board_user_router.py  endpoints.py  router.py
app/core/: config.py  database.py  exceptions.py
app/models/: __init__.py  base.py  board_model.py  board_user_model.py  classDiagram.md  todo.py
app/repositories/: board_repository.py  board_user_repository.py  todo_repository.py
app/schemas/: board_schema.py  board_user_schema.py  todo.py
app/services/: board_service.py  board_user_service.py  todo_service.py
initdb/: user-ddl.sql
